@@ -7,11 +7,6 @@
         <source>UPL (note for translators: the first three characters of this string are the accellerators (underlined characters) of the three input-fields in logon-dialog of windows - please keep this note as otherwise there are strange errors concerning logon-feature)</source>
         <translation>NPC (note for translators: the first three characters of this string are the accellerators (underlined characters) of the three input-fields in logon-dialog of windows - please keep this note as otherwise there are strange errors concerning logon-feature)</translation>
     </message>
-    <message>
-        <location filename="../src/local_system.cpp" line="621"/>
-        <source>iTALC-snapshots</source>
-        <translation>iTALC-foto</translation>
-    </message>
 </context>
 <context>
     <name>ivsConnection</name>
@@ -24,6 +19,14 @@
         <location filename="../src/ivs_connection.cpp" line="311"/>
         <source>Could not take a snapshot as directory %1 doesn&apos;t exist and couldn&apos;t be created.</source>
         <translation>Non è possibile scattare una foto perché la cartella %1 non esiste e non è possibile crearla.</translation>
+    </message>
+</context>
+<context>
+    <name>localSystem::QObject</name>
+    <message>
+        <location filename="../src/local_system.cpp" line="722"/>
+        <source>iTALC-snapshots</source>
+        <translation>iTALC-foto</translation>
     </message>
 </context>
 <context>
