@@ -1,3 +1,12 @@
+2007-06-09	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>
+
+	* ima/resources/it.ts:
+	* ima/resources/it.qm:
+	* lib/resources/it.ts:
+	* lib/resources/it.qm:
+	updated Italian localization and removed obsolete
+	translations
+
 2007-06-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* configure.in:
